--- a/package.json
+++ b/package.json
@@ -28,5 +28,10 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fontsource/fira-mono": "^5.0.5",
+		"@neoconfetti/svelte": "^1.0.0",
+		"@playwright/test": "^1.36.0"
+	}
 }
