--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"dependencies": {
 		"@fontsource/fira-mono": "^5.0.5",
 		"@neoconfetti/svelte": "^1.0.0",
-		"@playwright/test": "^1.36.0"
+		"@playwright/test": "^1.36.0",
+		"date-fns": "^2.30.0"
 	}
 }
