--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@fontsource/fira-mono": "^5.0.5",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@playwright/test": "^1.36.0",
+		"@sveltejs/adapter-static": "^2.0.2",
 		"date-fns": "^2.30.0"
 	}
 }
